--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 	      <script src = "js/vendor/angular.js"></script>
+	      <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>-->
 	      <script src = "js/vendor/angular-route.js"></script>
 	      
 	      <script src="js/app.js"></script>
 	      <script src="js/factories/me_facto.js"></script>
 	      <script src="js/controllers/login_ctrl.js"></script>
-	      <script src="js/main_ctrl.js"></script>
 
 	      <link href="css/style.css" rel="stylesheet">
 	      <link href="css/_login.css" rel="stylesheet">
 
 	</head>
 
-	<body ng-app="ivipulse">
-		<div ng-view>
-			
-		</div>
-	</body>
+	<body ng-app="ivipulse"> 
+	    <div ng-view> 
+	       
+	    </div> 
+  </body> 
 </html>
