shop display ok

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	      <script src="js/factories/me_facto.js"></script>
 	      <script src="js/main_ctrl.js" ></script>
 	      <script src="js/controllers/login_ctrl.js"></script>
+	      <script src="js/controllers/shop_ctrl.js"></script>
+	      <script src="js/factories/shop_facto.js"></script>
 
 			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -36,6 +38,7 @@
 		  <link href="css/style.css" rel="stylesheet">
 	      <link href="css/_login.css" rel="stylesheet">
 	      <link href="css/signin.css" rel="stylesheet">
+	      <link href="css/shop.css" rel="stylesheet">
 
 
 	</head>
