--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	      <script src="js/controllers/login_ctrl.js"></script>
 	      <script src="js/controllers/shop_ctrl.js"></script>
 	      <script src="js/factories/shop_facto.js"></script>
+	      <script src="js/controllers/store_ctrl.js"></script>
+	      <script src="js/factories/cards_facto.js"></script>
 
 			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
