--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	      <script src="js/controllers/login_ctrl.js"></script>
 	      <script src="js/controllers/shop_ctrl.js"></script>
 	      <script src="js/factories/shop_facto.js"></script>
+	      <script src="js/controllers/store_ctrl.js"></script>
+	      <script src="js/factories/cards_facto.js"></script>
 	      <script src="node_modules/lodash/lodash.js"></script>
 
 			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
