--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	      <script src = "js/vendor/angular.js"></script>
 	      <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>-->
 	      <script src = "js/vendor/angular-route.js"></script>
+	      <script src="node_modules/lodash/lodash.js"></script>
 	      
 	      <script src="js/app.js"></script>
 	      <script src="js/factories/me_facto.js"></script>
@@ -15,6 +16,7 @@
 	      <script src="js/controllers/store_ctrl.js"></script>
 	      <script src="js/factories/cards_facto.js"></script>
 	      <script src="node_modules/lodash/lodash.js"></script>
+
 
 			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
