--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	</head>
 
-	<body ng-app="ivipulse" ng-controller="main_ctrl">
+	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll" data-target=".navbar-custom">
 
 		<nav class="navbar navbar-default" role="navigation" bs-navbar>
 		  <div class="navbar-header">
