--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 	</head>
 
-	<body ng-app="ivipulse" ng-controller="main_ctrl">
+	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll" data-target=".navbar-custom">
 
 		<nav class="navbar navbar-default" role="navigation" bs-navbar ng-controller="login_ctrl">
 		  <div class="navbar-header">
