--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 	      <script src="js/factories/shop_facto.js"></script>
 	      <script src="node_modules/lodash/lodash.js"></script>
 
+	      <!-- directives-->
+	      <script src="js/directives/card.directive.js"></script>
+
+
+	      <script src="js/vendor/angular-strap.min.js"></script>
+
+			<script src="js/vendor/angular-strap.tpl.js"></script>
+
 			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
