--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	      <link href="css/_login.css" rel="stylesheet">
 	      <link href="css/signin.css" rel="stylesheet">
 	      <link href="css/shop.css" rel="stylesheet">
+	      <link href="css/store.css" rel="stylesheet">
 
 
 	</head>
