--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	      <script src="js/factories/cards_facto.js"></script>
 	      <script src="node_modules/lodash/lodash.js"></script>
 
+	      <script src="js/directives/card.directive.js"></script>
+
 	      <script src="js/vendor/angular-strap.min.js"></script>
 
 			<script src="js/vendor/angular-strap.tpl.js"></script>
