--- a/index.html
+++ b/index.html
@@ -2,58 +2,68 @@
 <html>
 	<head>
 
-	      <script src = "js/vendor/angular.js"></script>
-	      <!--<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>-->
-	      <script src = "js/vendor/angular-route.js"></script>
-	      <script src = "js/vendor/angular-cookies.js"></script>
+		<!-- AngularJS script files (v1.5.7) -->
+	    <script src = "lib/js/angular.js"></script>
+	    <script src = "lib/js/angular-route.js"></script>
+	    <script src = "lib/js/angular-cookies.js"></script>
+	    <script src="lib/js/angular-animate.js"></script>
 
-	      <script src="node_modules/lodash/lodash.js"></script>
+	    <!-- AngularStrap js files -->
+	    <script src="lib/js/angular-strap.js"></script>
+		<script src="lib/js/angular-strap.tpl.js"></script>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><-->
+		<script src="lib/js/jquery-2.2.4.js"></script>
+
+		<!-- BootStrap script file 
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
+		<script src="lib/js/bootstrap.js"></script>
 	      
-	      <script src="js/app.js"></script>
-	      <script src="js/factories/me_facto.js"></script>
-	      <script src="js/main_ctrl.js" ></script>
-	      <script src="js/controllers/login_ctrl.js"></script>
-	      <script src="js/controllers/shop_ctrl.js"></script>
-	      <script src="js/factories/shop_facto.js"></script>
-	      <script src="js/controllers/store_ctrl.js"></script>
-	      <script src="js/factories/cards_facto.js"></script>
-	      <script src="node_modules/lodash/lodash.js"></script>
+	    <!-- lodash module -->
+	    <script src="node_modules/lodash/lodash.js"></script>
+	    
+	    <!-- AngularJS app file -->  
+	    <script src="js/app.js"></script>
 
-	      <!-- directives-->
-	      <script src="js/directives/card.directive.js"></script>
+	    <!--controllers -->
+	    <script src="js/main_ctrl.js" ></script>
+	    <script src="js/controllers/login_ctrl.js"></script>
+	    <script src="js/controllers/shop_ctrl.js"></script>
+	    <script src="js/controllers/store_ctrl.js"></script>
+
+	    <!-- Factories -->
+	    <script src="js/factories/me_facto.js"></script>
+	    <script src="js/factories/shop_facto.js"></script>
+	    <script src="js/factories/cards_facto.js"></script>
+
+	    <!-- directives-->
+	    <script src="js/directives/card.directive.js"></script>
+
+	    <!-- Style Sheets -->
+
+	    <!-- For Bootstrap
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+		<link href="lib/css/bootstrap.css" rel="stylesheet">
+		
+
+		<!-- Optional theme for Bootstrap-->
+		<link href="lib/css/bootstrap-theme.css" rel="stylesheet">
+		
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+		<link href="lib/css/font-awesome.css" rel="stylesheet">
+
+      	<!-- Style sheets for AngularStrap -->
+		<link href="lib/css/angular-motion.css" rel="stylesheet">
 
 
-	      <script src="js/vendor/angular-strap.min.js"></script>
-
-			<script src="js/vendor/angular-strap.tpl.js"></script>
-
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-	      <!-- Latest compiled and minified CSS -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-			<!-- Optional theme -->
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-			<!-- Latest compiled and minified JavaScript -->
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-
-	      <!-- <script src="lib/js/bootstrap.min.js"></script>
-
-	      <link href="lib/css/bootstrap-theme.min.css" rel="stylesheet">
-	      <link href="lib/css/font-awesome.min.css" rel="stylesheet"> -->
-		  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> 
-      	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-      	<link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
-
-		  <link href="css/style.css" rel="stylesheet">
-	      <link href="css/_login.css" rel="stylesheet">
-	      <link href="css/signin.css" rel="stylesheet">
-	      <link href="css/shop.css" rel="stylesheet">
-	      <link href="css/store.css" rel="stylesheet">
-
+		<!-- Application Style Sheets -->
+		<link href="css/aside.css" rel="stylesheet">
+	    <link href="css/_login.css" rel="stylesheet">
+	    <link href="css/signin.css" rel="stylesheet">
+	    <link href="css/shop.css" rel="stylesheet">
+	    <link href="css/store.css" rel="stylesheet">
+	    <link href="css/style.css" rel="stylesheet">
 
 	</head>
 
@@ -67,8 +77,14 @@
 		    <li data-match-route="/home"><a href="#/">Home</a></li>
 		    <li data-match-route="/shop"><a href="#/shop">SHOP</a></li>
 		    <li data-match-route="/signin"><a href="#/signin">Signin</a></li>
-		    <li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" ng-if="!loggedIn"><b>Login</b> <span class="caret"></span></a>
+		    <li data-match-route="/store"><a href="#/store">Store</a></li>
+		    <li><input type="text" ng-model="contacts_filter" placeholder="Recherche"></li>
+		    <li><!-- <button type="button" class="btn btn-lg btn-primary" bs-aside="aside">Rechercher</button> -->
+
+		    <button type="button" class="btn btn-lg btn-white" data-template-url="./templates/aside.search.html" data-placement="left" data-animation="am-slide-left" bs-aside="aside" data-container="body">Rechercher</button></li>
+		    <li>
+		    	<button type="button" class="btn btn-lg btn-white" data-template-url="./templates/aside.login.html" data-placement="right" data-animation="am-slide-right" bs-aside="asideLogin" data-container="body" ng-if="!loggedIn">Login</button>
+				<!-- <a class="dropdown-toggle" data-toggle="dropdown" ng-if="!loggedIn"><b>Login</b> <span class="caret"></span></a> -->
 					<ul id="login-dp" class="dropdown-menu">
 						<li>
 							 <div class="row">
