--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<!-- BootStrap script file 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
 		<script src="lib/js/bootstrap.js"></script>
+		<script src="lib/js/bootstrap-datetimepicker.min.js"></script>
+		<script src="lib/js/bootstrap-datetimepicker.fr.js"></script> 
 	      
 	    <!-- lodash module -->
 	    <script src="node_modules/lodash/lodash.js"></script>
@@ -39,6 +41,7 @@
 
 	    <!-- directives-->
 	    <script src="js/directives/card.directive.js"></script>
+	     <script src="js/directives/cardProfil.directive.js"></script>
 
 	    <!-- Style Sheets -->
 
