--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	    <!-- directives-->
 	    <script src="js/directives/card.directive.js"></script>
 
+	    <!-- filters -->
+	    <script src="js/filters/search.filter.js"></script>
+
 	    <!-- Style Sheets -->
 
 	    <!-- For Bootstrap
@@ -70,11 +73,11 @@
 
 	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll" data-target=".navbar-custom">
 
-		<nav class="navbar navbar-default" role="navigation" bs-navbar ng-controller="login_ctrl">
+		<nav class="navbar navbar-default barre" role="navigation" bs-navbar ng-controller="login_ctrl">
 		  <div class="navbar-header">
 		    <a class="navbar-brand" href="#">Brand</a>
 		  </div>
-		  <ul class="nav navbar-nav">
+		  <ul class="nav navbar-nav navigbarre">
 		    <li data-match-route="/home"><a href="#/">Home</a></li>
 		    <li data-match-route="/shop"><a href="#/shop">SHOP</a></li>
 		    <li data-match-route="/signin"><a href="#/signin">Signin</a></li>
