--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	    <link href="css/signin.css" rel="stylesheet">
 	    <link href="css/store.css" rel="stylesheet">
 	    <link href="css/carte.css" rel="stylesheet">
+	    <link href="css/shop.css" rel="stylesheet">
 	    
 
 	</head>
