--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 	    <link href="css/store.css" rel="stylesheet">
 	    <link href="css/carte.css" rel="stylesheet">
 	    <link href="css/shop.css" rel="stylesheet">
+	    <link href="css/aside_contacts.css" rel="stylesheet">
 	    
 
 	</head>
