--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/aside.css" rel="stylesheet">
 	    <link href="css/_login.css" rel="stylesheet">
-	    <link href="css/signin.css" rel="stylesheet">
+	    <!--<link href="css/signin.css" rel="stylesheet"> -->
 	    <link href="css/store.css" rel="stylesheet">
 	    <link href="css/carte.css" rel="stylesheet">
 	    <link href="css/shop.css" rel="stylesheet">
 	    <link href="css/aside_contacts.css" rel="stylesheet">
+	    <link href="css/profil.css" rel="stylesheet">
 	    
 
 	</head>
