--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<div>
 		<nav class="navbar navbar-default" role="navigation" bs-navbar ng-controller="login_ctrl">
 			 <ul class="nav navbar-nav navigbarre">
-			    <li data-match-route="/home"><a href="#/">Home</a></li>
+			    <li data-match-route="/home"><a href="#/" class="barre-links">Home</a></li>
 			    <li data-match-route="/shop"><a href="#/shop">SHOP</a></li>
 			    <li data-match-route="/signin"><a href="#/signin">Signin</a></li>
 			    <li data-match-route="/store"><a href="#/store">Store</a></li>
