--- a/index.html
+++ b/index.html
@@ -85,31 +85,50 @@
 
 	</head>
 
-	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll" data-target=".navbar-custom">
-	<div>
-		<nav class="navbar navbar-default" role="navigation" bs-navbar ng-controller="login_ctrl">
-			 <ul class="nav navbar-nav navigbarre">
-			    <li data-match-route="/home"><a href="#/" class="barre-links">Home</a></li>
-			    <li data-match-route="/shop"><a href="#/shop">SHOP</a></li>
-			    <li data-match-route="/signin"><a href="#/signin">Signin</a></li>
-			    <li data-match-route="/store"><a href="#/store">Store</a></li>
-			    <li><input class="textRechercher" type="text" ng-model="contacts_filter" placeholder="Recherche">
-			    </li>
-			    <li>
-			    	<button type="button" class="buttonRechercher" data-template-url="./templates/aside.search.html" data-placement="left" data-animation="am-slide-left" bs-aside="aside" data-container="body">Rechercher</button>
-			    </li>
-			    <li class="boutonLogout">
-					<a href="#" ng-click="logout()">Logout</a>
-				</li>
-				<li class="barreBienvenue" ng-show="loggedIn">
-					<span>Bienvenue  &nbsp&nbsp{{user.first_name}} &nbsp{{user.last_name}}
-					</span>
-				</li>
-				
-	  		</ul>
+	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll">
+		<div class="container-fluid bar-global">
+		<nav class="navbar navbar-inverse" role="navigation" bs-navbar ng-controller="login_ctrl">
+			<div class="container">
+				<div class="navbar-header">
+			          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-3">
+			            <span class="sr-only">Toggle navigation</span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			          </button>
+			          <a class="navbar-brand bar-icon-logo" href="#/profil">
+				          <div >
+				          	<img src="img/icon-ivipulse.png" class="bar-icon-logo"/>
+				          </div>
+			          </a>
+			        <!-- fin div class="navbar-header"  -->  
+			    </div>
+		        <div class="collapse navbar-collapse" id="navbar-collapse-3">
+		          <ul class="nav navbar-nav navbar-right">
+					<li><a href="#/profil">Home</a></li>
+				    <li><a href="#/shop">Shop</a></li>
+				    <li><a href="#/profil">Profil</a></li>
+				    <li><a href="#/store">Contacts</a></li>
+				    <li><input class="textRechercher" type="text" ng-model="contacts_filter" placeholder="Recherche">
+				    </li>
+				    <li>
+				    	<button type="button" class="buttonRechercher" data-template-url="./templates/aside.search.html" data-placement="left" data-animation="am-slide-left" bs-aside="aside" data-container="body">Rechercher</button>
+				    </li>
+				    <li class="boutonLogout">
+						<a href="#" ng-click="logout()">Logout</a>
+					</li>
+					<li class="barreBienvenue" ng-show="loggedIn">
+						<span>Bienvenue  &nbsp&nbsp{{user.first_name}} &nbsp{{user.last_name}}
+						</span>
+					</li>
+		          </ul>
+				<!-- fin class="collapse navbar-collapse"  -->
+				</div>
+			<!-- fin div class="container"  -->
+			</div>
 		</nav>
+		<div ng-view></div> 
 	</div>
-	<div ng-view></div> 
   </body> 
   <link href='https://api.ivipulse.com/templates/all.css' rel='stylesheet'>
 
