--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 	    <script src="lib/js/angular-strap.js"></script>
 		<script src="lib/js/angular-strap.tpl.js"></script>
 
-		<!-- shim is needed to support non-HTML5 FormData browsers (IE8-9)-->
-		<script src="ng-file-upload-shim.min.js"></script>
-		<script src="ng-file-upload.min.js"></script>
-
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins)
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><-->
 		<script src="lib/js/jquery-2.2.4.js"></script>
@@ -73,9 +69,7 @@
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/aside.css" rel="stylesheet">
 	    <link href="css/_login.css" rel="stylesheet">
-	    <!--<link href="css/signin.css" rel="stylesheet"> -->
 	    <link href="css/store.css" rel="stylesheet">
-	    <link href="css/carte.css" rel="stylesheet">
 	    <link href="css/shop.css" rel="stylesheet">
 	    <link href="css/aside_contacts.css" rel="stylesheet">
 	    <link href="css/profil.css" rel="stylesheet">
@@ -96,7 +90,7 @@
 			            <span class="icon-bar"></span>
 			            <span class="icon-bar"></span>
 			          </button>
-			          <a class="navbar-brand bar-icon-logo" href="#/profil">
+			          <a class="navbar-brand bar-icon-logo" href="#">
 				          <div >
 				          	<img src="img/icon-ivipulse.png" class="bar-icon-logo"/>
 				          </div>
@@ -105,9 +99,9 @@
 			    </div>
 		        <div class="collapse navbar-collapse" id="navbar-collapse-3">
 		          <ul class="nav navbar-nav navbar-right">
-					<li><a href="#/profil">Home</a></li>
+					<li><a href="#">Home</a></li>
 				    <li><a href="#/shop">Shop</a></li>
-				    <li><a href="#/profil">Profil</a></li>
+				    <li><a href="#">Profil</a></li>
 				    <li><a href="#/store">Contacts</a></li>
 				    <li><input class="textRechercher" type="text" ng-model="contacts_filter" placeholder="Recherche">
 				    </li>
