--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			            <span class="icon-bar"></span>
 			            <span class="icon-bar"></span>
 			          </button>
-			          <a class="navbar-brand bar-icon-logo" href="#">
+			          <a class="navbar-brand bar-icon-logo" href="#/profil">
 				          <div >
 				          	<img src="img/icon-ivipulse.png" class="bar-icon-logo"/>
 				          </div>
@@ -99,9 +99,9 @@
 			    </div>
 		        <div class="collapse navbar-collapse" id="navbar-collapse-3">
 		          <ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>
+					<li><a href="#/profil">Home</a></li>
 				    <li><a href="#/shop">Shop</a></li>
-				    <li><a href="#">Profil</a></li>
+				    <li><a href="#/profil">Profil</a></li>
 				    <li><a href="#/store">Contacts</a></li>
 				    <li><input class="textRechercher" type="text" ng-model="contacts_filter" placeholder="Recherche">
 				    </li>
@@ -109,7 +109,7 @@
 				    	<button type="button" class="buttonRechercher" data-template-url="./templates/aside.search.html" data-placement="left" data-animation="am-slide-left" bs-aside="aside" data-container="body">Rechercher</button>
 				    </li>
 				    <li class="boutonLogout">
-						<a href="#" ng-click="logout()">Logout</a>
+						<a href="#" ng-click="logout()" ng-show="loggedIn">Logout</a>
 					</li>
 					<li class="barreBienvenue" ng-show="loggedIn">
 						<span>Bienvenue  &nbsp&nbsp{{user.first_name}} &nbsp{{user.last_name}}
