--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 	    
 
 	</head>
-
+	<!-- Chargement du module principal au travers de la directive ng-app 
+	et initialisation du contrôleur principal -->
 	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll">
 		<div class="container-fluid bar-global">
 		<nav class="navbar navbar-inverse" role="navigation" bs-navbar ng-controller="login_ctrl">
@@ -121,6 +122,9 @@
 			<!-- fin div class="container"  -->
 			</div>
 		</nav>
+		<!-- Emplacement des vues des différentes pages définies dans la table de routage
+		au travers de la directive ng-view
+		-->
 		<div ng-view></div> 
 	</div>
   </body> 
