--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><-->
 		<script src="lib/js/jquery-2.2.4.js"></script>
 
-		<!-- BootStrap script file 
+		<!-- BootStrap script file
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
 		<script src="lib/js/bootstrap.js"></script>
 		<script src="lib/js/ui-bootstrap-tpls-1.3.3.min.js"></script>
-		
+
 		<!-- <script src="lib/js/bootstrap-datetimepicker.min.js"></script>
-		<script src="lib/js/bootstrap-datetimepicker.fr.js"></script> 
+		<script src="lib/js/bootstrap-datetimepicker.fr.js"></script>
 			       -->
 	    <!-- lodash module -->
 	    <script src="node_modules/lodash/lodash.js"></script>
-	    
-	    <!-- AngularJS app file -->  
+
+	    <!-- AngularJS app file -->
 	    <script src="js/app.js"></script>
+	    <script src="lib/js/angular-base64.js"></script>
 
 	    <!--controllers -->
 	    <script src="js/main_ctrl.js" ></script>
@@ -40,10 +41,14 @@
 	    <script src="js/factories/me_facto.js"></script>
 	    <script src="js/factories/shop_facto.js"></script>
 	    <script src="js/factories/cards_facto.js"></script>
+	    <script src="js/factories/file_facto.js"></script>
+			<script src="js/factories/search_facto.js"></script>
 
 	    <!-- directives-->
 	    <script src="js/directives/card.directive.js"></script>
 	    <script src="js/directives/cardProfil.directive.js"></script>
+	    <script src="js/directives/file.directive.js"></script>
+			<script src="js/directives/social.directive.js"></script>
 
 	    <!-- filters -->
 	    <script src="js/filters/search.filter.js"></script>
@@ -53,12 +58,12 @@
 	    <!-- For Bootstrap
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
 		<link href="lib/css/bootstrap.css" rel="stylesheet">
-		
+
 
 		<!-- Optional theme for Bootstrap-->
 		<link href="lib/css/bootstrap-theme.css" rel="stylesheet">
-		
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link href="lib/css/font-awesome.css" rel="stylesheet">
 
       	<!-- Style sheets for AngularStrap -->
@@ -75,14 +80,14 @@
 	    <link href="css/profil.css" rel="stylesheet">
 	    <link rel="stylesheet" type="text/css" href="css/card.css">
 	    <link href="css/home.css" type="text/css" rel="stylesheet">
-	    
+
 
 	</head>
-	<!-- Chargement du module principal au travers de la directive ng-app 
+	<!-- Chargement du module principal au travers de la directive ng-app
 	et initialisation du contrôleur principal -->
 	<body ng-app="ivipulse" ng-controller="main_ctrl" data-spy="scroll">
 		<div class="container-fluid bar-global">
-		<nav class="navbar navbar-inverse" role="navigation" bs-navbar ng-controller="login_ctrl">
+		<nav class="navbar navbar-inverse" role="navigation" bs-navbar>
 			<div class="container">
 				<div class="navbar-header">
 			          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-3">
@@ -91,12 +96,12 @@
 			            <span class="icon-bar"></span>
 			            <span class="icon-bar"></span>
 			          </button>
-			          <a class="navbar-brand bar-icon-logo" href="#/profil">
+			          <a class="navbar-brand bar-icon-logo" href="#/profil" data-target="#profil">
 				          <div >
 				          	<img src="img/icon-ivipulse.png" class="bar-icon-logo"/>
 				          </div>
 			          </a>
-			        <!-- fin div class="navbar-header"  -->  
+			        <!-- fin div class="navbar-header"  -->
 			    </div>
 		        <div class="collapse navbar-collapse" id="navbar-collapse-3">
 		          <ul class="nav navbar-nav navbar-right">
@@ -113,7 +118,7 @@
 						<a href="#" ng-click="logout()" ng-show="loggedIn">Logout</a>
 					</li>
 					<li class="barreBienvenue" ng-show="loggedIn">
-						<span>Bienvenue  &nbsp&nbsp{{user.first_name}} &nbsp{{user.last_name}}
+						<span>Bienvenue  &nbsp&nbsp{{globals.currentUser.first_name}} &nbsp{{globals.currentUser.last_name}}
 						</span>
 					</li>
 		          </ul>
@@ -125,9 +130,9 @@
 		<!-- Emplacement des vues des différentes pages définies dans la table de routage
 		au travers de la directive ng-view
 		-->
-		<div ng-view></div> 
+		<div ng-view></div>
 	</div>
-  </body> 
+  </body>
   <link href='https://api.ivipulse.com/templates/all.css' rel='stylesheet'>
 
 </html>
